hardcoded popular blog

--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -36,10 +36,22 @@ const blogs = await db
           <div class="p-2 lg:p-4 xl:p-8 lg:border-b border-gray-700">
             <h2 class="text-2xl">Popular posts</h2>
             <ul class="mt-4 space-y-4 text-gray-400">
-              <li><a href="/blog/images/">Better Images in Astro</a></li>
-              <li><a href="/blog/images/">2023 Web Framework Performance Report</a></li>
-              <li><a href="/blog/hybrid-rendering/">Unlock New Possibilities with Hybrid Rendering</a></li>
-              <li><a href="/blog/netlify-official-deployment-partner/">Netlify: Our Official Deployment Partner</a></li>
+              <li>
+                <a
+                  href="https://medium.com/@the_infinity/master-c-like-a-pro-the-ultimate-guide-for-beginners-and-experts-alike-5e6aa5ebf7da"
+                  >Master C++ like a pro!</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://medium.com/techskill-brew/what-is-blockchain-technology-part-1-blockchain-basics-e44847198c94"
+                  >What is Blockchain technology?</a
+                >
+              </li>
+              <li>
+                <a href="https://poojasinhaa.medium.com/beginners-guide-to-ui-ux-design-da728760f22b">UI/UX Designing</a
+                >
+              </li>
             </ul>
           </div>
           <div class="lg:border-b border-gray-700 p-2 lg:p-4 xl:p-8">
