--- a/src/pages/developers.astro
+++ b/src/pages/developers.astro
@@ -7,7 +7,7 @@ const developers = [
     name: 'Len',
     description: '"I dont know broo"',
     linkedinLink: '#',
-    githubLink: '#',
+    githubLink: 'GitHub.com/len-mendonca',
     instagramLink: '#',
     frontImage: 'Len',
     backImage: 'lenanime',
@@ -15,9 +15,9 @@ const developers = [
   {
     name: 'Karthik S salian',
     description: '"Who said I left the kitchen? 😎 ❄"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'https://www.linkedin.com/in/karthik-salian-3a7a26246/',
+    githubLink: 'https://github.com/Karthik-S-Salian',
+    instagramLink: 'https://www.instagram.com/karthik_s_.salian/',
     frontImage: 'karthik',
     backImage: 'karthikanime',
   },
@@ -33,18 +33,18 @@ const developers = [
   {
     name: 'Rakshith Vijay',
     description: '"Dont touch my daughter"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'https://www.linkedin.com/in/rakshith-vijay-0b515b256?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app',
+    githubLink: 'https://github.com/rakshithx09',
+    instagramLink: 'https://www.instagram.com/rakshithx09?igsh=cmgwZThzZWpqYmI4&utm_source=qr',
     frontImage: 'rakshith',
     backImage: 'rakshithanime',
   },
   {
     name: 'Anant Shetty',
     description: '"HTML+ Golang"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'https://www.linkedin.com/in/ananth-shetty-428056286/ ',
+    githubLink: 'https://github.com/Ananth1082',
+    instagramLink: '/developers',
     frontImage: 'Ananth',
     backImage: 'ananthanime',
   },
@@ -62,31 +62,31 @@ const developers = [
     description: '"A retired CR"',
     linkedinLink: 'www.linkedin.com/in/bhavyanayak/',
     githubLink: 'github.com/BhavyaNayak04',
-    instagramLink: 'www.instagram.com/bhv_nayak/',
+    instagramLink: 'https://www.instagram.com/bhv_nayak?igsh=MXBueW1nY2oxMjgwNA==',
     frontImage: 'bhavya',
     backImage: 'bhavyaanime',
   },
   {
     name: 'Varun Pai',
     description: '"Flutter fluttering"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'https://linkedin.com/in/varunpaimd/',
+    githubLink: ' https://github.com/varunpai314',
+    instagramLink: '/developers',
     frontImage: 'varunpai',
     backImage: 'varunpaianime',
   },
   {
     name: 'AkhilManoj',
     description: '"No--words"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: 'https://www.linkedin.com/in/akhil-m-55aaa5201/',
+    githubLink: 'https://github.com/SilveRSparK1',
+    instagramLink: 'https://www.instagram.com/___a_a_m_p___/',
     frontImage: 'akhil',
     backImage: 'akhilanime',
   },
   {
     name: 'Chinmayee Bhat',
-    description: '"sings"',
+    description: '"From perfect penmanship to perfect pitches, precision is my game!"',
     linkedinLink: 'https://www.linkedin.com/in/chinmayee-bhat-644454259/',
     githubLink: 'https://github.com/CHINMAYEEBHAT',
     instagramLink: 'https://www.instagram.com/chinmayeebhat_sings/',
@@ -114,18 +114,18 @@ const developers = [
   {
     name: 'Varun Arkal',
     description: '"All hail me"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: '/developers',
+    githubLink: '/developers',
+    instagramLink: '/developers',
     frontImage: 'Arkal Varun Hegde',
     backImage: 'varunarkalanime',
   },
   {
     name: 'Pavan Chitrapura',
     description: '"design and aspire"',
-    linkedinLink: '#',
-    githubLink: '#',
-    instagramLink: '#',
+    linkedinLink: '/developers',
+    githubLink: '/developers',
+    instagramLink: '/developers',
     frontImage: 'pavan',
     backImage: 'pavananime',
   },
