--- a/src/components/landing/Events.astro
+++ b/src/components/landing/Events.astro
@@ -2,35 +2,35 @@
 const cards = [
   {
     title: 'jsddsg',
-    image: '/images/sample.png',
+    image: '/images/eventpic/cultural.jpg',
   },
   {
     title: 'jsddsg',
-    image: '/images/sample.png',
+    image: '/images/eventpic/Placement.JPG',
   },
   {
     title: 'jsddsg',
-    image: '/images/sample.png',
+    image: '/images/eventpic/incrediaripoff.jpg',
   },
   {
     title: 'jsddsg',
-    image: '/images/sample.png',
+    image: '/images/eventpic/techevent.jpg',
   },
   {
     title: 'jsddsg',
-    image: '/images/sample.png',
+    image: '/images/eventpic/techtainment1.jpg',
   },
   {
     title: 'jsddsg',
-    image: '/images/sample.png',
+    image: '/images/eventpic/gallery.jpg',
   },
   {
     title: 'jsddsg',
-    image: '/images/sample.png',
+    image: '/images/eventpic/placementtalks2.JPG',
   },
   {
     title: 'jsddsg',
-    image: '/images/sample.png',
+    image: '/images/eventpic/projectexpo.JPG',
   },
 ];
 ---
