--- a/src/components/landing/Benifits.astro
+++ b/src/components/landing/Benifits.astro
@@ -5,31 +5,31 @@ const cards = [
   {
     title: 'Workshop',
     content: 'Sharpen your skills, because nobody ever built a career with dull tools',
-    image: 'sample',
+    image: 'workshop',
   },
   {
     title: 'Cultural Events',
     content: 'Join the fun – because life’s too short for boring weekends!',
-    image: 'sample',
+    image: 'cultural',
   },
   {
     title: 'Sports',
     content: 'Where the game begins and excuses end—play hard or go home!',
-    image: 'sample',
+    image: 'sports',
   },
   {
     title: 'Project Expo',
     content: 'Innovations on display—turning ideas into wow!!!',
-    image: 'sample',
+    image: 'projectexpo',
   },
   {
     title: 'Placement guidence',
     content: 'From campus to corporate—let’s nail our dream job, one step at a time!',
-    image: 'sample',
+    image: 'placement',
   },
 ];
 const images: { [index: string]: ImageMetadata } = {};
-await Astro.glob('/src/assets/images/sample.png').then((files) => {
+await Astro.glob('/src/assets/images/Benifits/*.png').then((files) => {
   files.forEach((file) => {
     const name = file.default.src.split('.')[0].split('/').pop();
     images[name] = file.default;
