--- a/src/pages/blogs/index.astro
+++ b/src/pages/blogs/index.astro
@@ -27,7 +27,7 @@ const blogs = await db
       <div class="lg:py-18 py-12 sm:py-14 md:py-16 xl:py-20 flex flex-col items-center gap-6 text-center">
         <h1 class="fade-up uppercase text-6xl mx-auto max-w-screen-lg font-dirtyline">ACE BLOGS</h1>
         <p class="fade-up text-gray-200 font-syne-variable">
-          <a href="/blogs/new"> Where creativity meets curiosity! click here to start writing </a>
+          Where creativity meets curiosity! click <a href="/blogs/new">here</a> to start writing
         </p>
       </div>
 
