--- a/src/components/landing/Gallery.astro
+++ b/src/components/landing/Gallery.astro
@@ -1,40 +1,38 @@
 ---
-import { Image } from "astro:assets";
-import sample from '../../assets/images/sample.png'
+import { Image } from 'astro:assets';
+
+let images: ImageMetadata[] = [];
+await Astro.glob('/src/assets/images/eventpic/*.{jpg,JPG}').then((files) => {
+  files.forEach((file) => {
+    images.push(file.default);
+  });
+});
 ---
+
 <section class="overflow-hidden gallery-parent hidden md:block">
   <div class="gallery-container w-full h-full space-y-4">
     <div class="flex gap-4 h-[75%] m-auto image-row">
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
+      { 
+        images.map((img) => {
+          return <Image src={img} alt="fndf" />;
+        })
+      }
     </div>
 
     <div class="flex gap-4 h-[75%] m-auto image-row">
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
+      { 
+        images.map((img) => {
+          return <Image src={img} alt="fndf" />;
+        })
+      }
     </div>
 
     <div class="flex gap-4 h-[75%] m-auto image-row">
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
-      <Image src={sample} alt="fndf" />
+      { 
+        images.map((img) => {
+          return <Image src={img} alt="fndf" />;
+        })
+      }
     </div>
   </div>
 </section>
