fix: vercel build errors

--- a/src/pages/admin/events/new-events.astro
+++ b/src/pages/admin/events/new-events.astro
@@ -24,6 +24,8 @@ if (!session?.user) {
     e.preventDefault();
     const formData = new FormData(e.target as HTMLFormElement);
     const { data, error } = await actions.createEvent(formData);
+    console.log(data);
+    
 
     console.log(error);
   });
