--- a/src/components/landing/Benifits.astro
+++ b/src/components/landing/Benifits.astro
@@ -9,7 +9,7 @@ const cards = [
   },
   {
     title: 'Cultural Events',
-    content: 'Join the fun – because life’s too short for boring weekends!',
+    content: 'Join the fun - because life&#39;s too short for boring weekends!',
     image: 'cultural',
   },
   {
@@ -24,7 +24,7 @@ const cards = [
   },
   {
     title: 'Placement guidence',
-    content: 'From campus to corporate—let’s nail our dream job, one step at a time!',
+    content: 'From campus to corporate—let&#39;s nail our dream job, one step at a time!',
     image: 'placement',
   },
 ];
